--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     </head>
 
-<body class="text-center">  <!--heading-->
+<body class="text-center p-5">  <!--heading-->
     <div class="container p-1">
         <div class="row">
             <div class="col-md-12 col-sm-6 col-6 bg-info rounded border-success text-white">
